[package]
name = "flight-network-planner"
version = "1.2.6"
edition = "2021"
description = "Minecart Rapid Transit Flight Network Planner for airlines"
authors = ["7d <61975820+iiiii7d@users.noreply.github.com>"]
license = "GPL-3.0-only"
readme = "README.md"
keywords = [
  "mrt",
]
categories = ["games"]
homepage = "https://github.com/mrt-aurora-air/flight-network-planner"
repository = "https://github.com/mrt-aurora-air/flight-network-planner"
rust-version = "1.84.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_yaml = "=0.9.34"

log = "=0.4.27"
pretty_env_logger = "=0.5.0"
clap = { version = "=4.5.40", features = ["derive"] }
clap_complete_command = { version = "=0.6.1", features = ["carapace", "fig"] }

anyhow = { version = "=1.0.100", features = ["backtrace"] }
itertools = "=0.14.0"
regex = "=1.12.2"
smol_str = { version = "=0.3.2", features = ["serde"] }

gatelogue-types = { version = "2.0.4", features = ["ureq_get"] }
counter = "=0.7.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[lints.rust]
future-incompatible = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
cargo = "warn"
nursery = "warn"

missing_errors_doc = { level="allow", priority = 1 }
missing_panics_doc = { level="allow", priority = 1 }
cast_precision_loss = { level="allow", priority = 1 }
cast_possible_truncation = { level="allow", priority = 1 }
module_name_repetitions = { level="allow", priority = 1 }
multiple_crate_versions = { level="allow", priority = 1 }
used_underscore_binding = { level="allow", priority = 1 }
pub_underscore_fields = { level="allow", priority = 1 }
similar_names = { level="allow", priority = 1 }

allow_attributes = "warn"
#arithmetic_side_effects = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
decimal_literal_representation = "warn"
default_union_representation = "warn"
deref_by_slicing = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
#infinite_loop = "warn"
lossy_float_literal = "warn"
mem_forget = "warn"
missing_asserts_for_indexing = "warn"
#missing_inline_in_public_items = "warn"
mixed_read_write_in_expression = "warn"
mutex_atomic = "warn"
needless_raw_strings = "warn"
# partial_pub_fields = "warn"
pathbuf_init_then_push = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
semicolon_inside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
string_to_string = "warn"
try_err = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
verbose_file_reads = "warn"
